--- a/第四章量子算法与编程.md
+++ b/第四章量子算法与编程.md
@@ -24,7 +24,7 @@
 
 &emsp;&emsp;例：如何构造一个量子程序，并在量子虚拟机中运行它。
 
-&emsp;&emsp;首先假设有一台量子计算机，它有2个量子比特：$$Q_1$$、$$Q_2$$，接着对其中一个量子比特（$$Q_1$$）进行$$H$$门操作，构造了一个量子叠加态；并对$$Q_1$$和$$Q_2$$做$$CNOT$$门操作，$$Q_1$$为控制量子比特，$$Q_2$$为目标量子比特，最后对所有的量子比特进行测量操作。此时，将有50%的概率得到00或者11的测量结果。代码示例如下：
+&emsp;&emsp;首先假设有一台量子计算机，它有2个量子比特：<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=default">>$$Q_1$$、$$Q_2$$</script>，接着对其中一个量子比特（$$Q_1$$）进行$$H$$门操作，构造了一个量子叠加态；并对$$Q_1$$和$$Q_2$$做$$CNOT$$门操作，$$Q_1$$为控制量子比特，$$Q_2$$为目标量子比特，最后对所有的量子比特进行测量操作。此时，将有50%的概率得到00或者11的测量结果。代码示例如下：
 
 ```c++
  1.#include "QPanda.h"      
